[package]
name         = "oxidized-crypto"
version      = "0.1.0"
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/oxidized-mc/crypto"
homepage     = "https://github.com/oxidized-mc/crypto"
rust-version = "1.85"
readme       = "README.md"
documentation = "https://docs.rs/oxidized-crypto"
description  = "Minecraft protocol cryptography — AES-128-CFB8 stream cipher, RSA-1024 keypair generation, Minecraft SHA-1 digest"
keywords     = ["minecraft", "oxidized-mc"]
categories   = ["game-development"]

[dependencies]
aes       = "0.8"
md-5      = "0.11"
rand      = "0.10"
rsa       = { version = "0.9", features = ["sha2", "getrandom"] }
sha1      = "0.10"
thiserror = "2"
uuid      = { version = "1", features = ["v3", "v4"] }

[dev-dependencies]
proptest = "1"

[lints.rust]
missing_docs   = "warn"
unsafe_code    = "deny"
unused_imports = "warn"

[lints.clippy]
# Correctness — hard errors
correctness                = { level = "deny", priority = -1 }
# Performance and style — warnings
perf                       = { level = "warn", priority = -1 }
style                      = { level = "warn", priority = -1 }
complexity                 = { level = "warn", priority = -1 }
suspicious                 = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
print_stdout               = "deny"
print_stderr               = "deny"
needless_pass_by_value     = "warn"
redundant_clone            = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
cast_possible_truncation   = "allow"
cast_sign_loss             = "allow"
cast_possible_wrap         = "allow"
